@@ -1,5 +1,9 @@
 2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>
 
+    * src/components/ogre/TerrainEditor.cpp: added some nice casts, rearranged some exception catching
+
+2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>
+
     * src/components/ogre/ogre.cfg: update the config to work with Ogre 1.2
 
 2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>
